added the files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build & Deploy to GitHub Pages (Docker)
+name: Build & Deploy Pages
 
 on:
   push:
@@ -12,37 +12,30 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
 
-      - name: Create site directory
-        run: mkdir -p site
+      - run: mkdir -p site
 
-      - name: Build Docker image
-        run: docker build -t site-builder .
+      - run: docker build -t site-builder .
 
-      - name: Run build container
-        run: |
+      - run: |
           docker run --rm \
             -v "${{ github.workspace }}/site:/app/site" \
             site-builder
 
-      - name: Verify site output
-        run: ls -R site
+      - run: |
+          ls -la site
+          test -f site/index.html
 
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v3
+      - uses: actions/upload-pages-artifact@v3
         with:
           path: site
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
-
     environment:
       name: github-pages
-
     steps:
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
+      - uses: actions/deploy-pages@v4
